force-app/main/default/objects/SAI_File_Control__c/SAI_File_Control__c.object-meta.xml
<CustomObject>
    <label>SAI File Control</label>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>SAI File Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI File Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>