force-app/main/default/objects/SAI_File_Control__c/fields/End_DateTime_Extraction__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime_Extraction__c</fullName>
    <label>End DateTime Extraction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>