force-app/main/default/objects/SAI_File_Control__c/fields/Hash_Total_3__c.field-meta.xml
<CustomField>
    <fullName>Hash_Total_3__c</fullName>
    <label>Hash Total 3</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>