force-app/main/default/objects/SAI_File_Control__c/fields/Number_Of_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Records__c</fullName>
    <label>Number Of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>