force-app/main/default/objects/SAI_File_Control__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>