force-app/main/default/objects/SAI_File_Control__c/fields/Start_DateTime_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime_Extraction__c</fullName>
    <label>Start DateTime Extraction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>